Обработка файлов изображений (этап 2)