@@ -3,6 +3,7 @@ package ru.alejov.media.gallery;
 import org.apache.commons.imaging.Imaging;
 import org.apache.commons.imaging.common.ImageMetadata;
 
+import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.awt.image.BufferedImage;
 import java.nio.file.Path;
@@ -11,10 +12,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.TreeMap;
+import java.util.stream.Collectors;
 
 public class MetadataUtils {
-    public static Map<String, String> getMetadata(Path path, String type) {
-        Map<String, String> metadata = Collections.emptyMap();
+
+
+    @Nonnull
+    public static Map<MetaTag, String> getMetadata(Path path, String type) {
+        Map<MetaTag, String> metadata = Collections.emptyMap();
         if (type.equals("i")) {
             try {
                 ImageMetadata imageMetadata = Imaging.getMetadata(path.toFile());
@@ -24,12 +29,12 @@ public class MetadataUtils {
                                              .map(Objects::toString)
                                              .map(Tag::parse)
                                              .filter(Objects::nonNull)
-                                             .toList();
+                                             .collect(Collectors.toList());
                     metadata = new TreeMap<>();
                     boolean hasSize = false;
                     for (Tag tag : tagList) {
                         metadata.put(tag.key, tag.value);
-                        if (tag.key.contains("ImageWidth")) {
+                        if (tag.key == MetaTag.ImageWidth || tag.key == MetaTag.ExifImageWidth) {
                             hasSize = true;
                         }
                     }
@@ -37,11 +42,11 @@ public class MetadataUtils {
                         BufferedImage bufferedImage = Imaging.getBufferedImage(path.toFile());
                         int width = bufferedImage.getWidth();
                         int height = bufferedImage.getHeight();
-                        metadata.put("ImageWidth", String.valueOf(width));
-                        metadata.put("ImageLength", String.valueOf(height));
+                        metadata.put(MetaTag.ImageWidth, String.valueOf(width));
+                        metadata.put(MetaTag.ImageLength, String.valueOf(height));
                     } else {
-                        metadata.put("ImageWidth", metadata.remove("ExifImageWidth"));
-                        metadata.put("ImageLength", metadata.remove("ExifImageLength"));
+                        metadata.put(MetaTag.ImageWidth, metadata.remove(MetaTag.ExifImageWidth));
+                        metadata.put(MetaTag.ImageLength, metadata.remove(MetaTag.ExifImageLength));
                     }
                 }
             } catch (Exception e) {
@@ -53,10 +58,10 @@ public class MetadataUtils {
 
     public static class Tag {
 
-        private final String key;
+        private final MetaTag key;
         private final String value;
 
-        public Tag(String key, String value) {
+        public Tag(MetaTag key, String value) {
             this.key = key;
             this.value = value;
         }
@@ -64,8 +69,8 @@ public class MetadataUtils {
         @Nullable
         public static Tag parse(String s) {
             String[] strings = s.split(":");
-            String key = strings[0];
-            if (!legal(key.strip())) {
+            MetaTag metaTag = MetaTag.of(strings[0].trim());
+            if (metaTag == null) {
                 return null;
             }
             String value;
@@ -73,18 +78,18 @@ public class MetadataUtils {
             if (length == 1) {
                 value = null;
             } else if (length == 2) {
-                value = strings[1].strip();
+                value = strings[1].trim();
             } else {
                 StringBuilder stringBuilder = new StringBuilder(strings[1]);
                 for (int i = 2; i < length; i++) {
                     stringBuilder.append(strings[i]);
                 }
-                value = stringBuilder.toString().strip();
+                value = stringBuilder.toString().trim();
             }
-            if (value != null && (key.equals("Make") || key.equals("Model") || key.equals("Software"))) {
-                value = value.replace(",", "").strip();
+            if (value != null && (metaTag == MetaTag.Make || metaTag == MetaTag.Model || metaTag == MetaTag.Software)) {
+                value = value.replace(",", "").trim();
             }
-            return new Tag(key, value);
+            return new Tag(metaTag, value);
         }
 
         @Override
@@ -92,17 +97,6 @@ public class MetadataUtils {
             return key + ":" + value;
         }
 
-        private static boolean legal(String key) {
-            return key.equals("ExifImageWidth") ||
-                   key.equals("ExifImageLength") ||
-                   key.equals("DateTimeOriginal") ||
-                   key.equals("Make") ||
-                   key.equals("Model") ||
-                   key.equals("GPSLatitude") ||
-                   key.equals("GPSLongitude") ||
-                   key.equals("Software") ||
-                   key.equals("Orientation");
-        }
 
     }
 }
